--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="/Users/workshop/Google Drive/league-jars/robot.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/workshop/Google Drive/league-jars/TeachingKidsProgramming - unicorn.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Users/workshop/Google Drive/league-jars/TeachingKidsProgramming - Java6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
